# project-setup

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  _typos.toml  cliff.toml  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml  cleanup-pr-cache.yml  code_quality.yml  markdown.yml  rust.yml  typos.yml
project_setup_derive/: Cargo.toml
project_setup_derive/src/: lib.rs
src/: app.rs  args.rs  create_project.rs  editor.rs  focus_input.rs  language.rs  lib.rs  list_state_item.rs  main.rs  project_config.rs  project_packaging.rs  project_type.rs  vcs.rs
src/app/: application.rs  cargo.rs  cmake.rs  inner.rs  mod.rs  prepare.rs  radio_option.rs  springboot.rs  wip.rs
src/common/: create_project.rs  direction.rs  editor.rs  executable.rs  executable_enum.rs  focus_input.rs  language.rs  loop_number.rs  mod.rs  project_config.rs  project_packaging.rs  project_type.rs  vcs.rs
src/features/: download.rs  mod.rs  zip.rs
src/v1/: app.rs  mod.rs
src/v2/: appv2.rs  cmake.rs  focus.rs  inner.rs  mod.rs  radio_option.rs  render.rs  springboot.rs  wip.rs
