[package]
name = "project-setup"
version = "0.1.0"
edition = "2024"
authors = ["xsy420 <xsy0420@gmail.com>"]
license = "Apache-2.0"

description = "A TUI to help you setup a project easily."

homepage = "https://github.com/xsy420/project-setup"
repository = "https://github.com/xsy420/project-setup"
readme = "README.md"
rust-version = "1.87.0"

[package.metadata.deb]
assets = [
  [
    "target/release/project-setup",
    "/usr/bin/",
    "755",
  ],
  [
    "LICENSE",
    "/usr/share/doc/project-setup/LICENSE",
    "644",
  ],
  [
    "README.md",
    "/usr/share/licenses/project-setup/README.md",
    "644",
  ],
]
[package.metadata.generate-rpm]
assets = [
  { source = "target/release/project-setup", dest = "/usr/bin/project-setup", mode = "755" },
  { source = "LICENSE", dest = "/usr/share/licenses/project-setup/LICENSE", mode = "644" },
  { source = "README.md", dest = "/usr/share/doc/project-setup/README.md", mode = "644" },
]
[profile.release]
strip = true

[profile.dev]
strip = true

[features]
# default = ["reqwest", "zip"]
default = []
reqwest = ["dep:reqwest"]
zip = ["dep:zip"]
[dependencies]
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"]}
anyhow = "1.0.98"
reqwest = { version = "0.12.20", default-features = false, features = ["blocking", "default-tls"] , optional = true}
zip = { version = "4.1.0", default-features = false, features = ["deflate"], optional = true }
strum = "0.27.1"
strum_macros = "0.27.1"
num-traits = "0.2.19"
num-derive = "0.4.2"
clap = { version = "4.5.40", features = ["derive"] }
project_setup_derive = { path = "./project_setup_derive" }
tui-big-text = "0.7.1"
heck = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.1", features = ["full"]}
