[workspace]
[package]
name = "project-setup"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
description = "A TUI to help you setup a project easily."
readme = "README.md"
homepage = "https://github.com/xsy420/project-setup"
repository = "https://github.com/xsy420/project-setup"
license = "Apache-2.0"
default-run = "project-setup"

[package.metadata.deb]
assets = [
  [
    "target/release/project-setup",
    "/usr/bin/",
    "755",
  ],
  [
    "LICENSE",
    "/usr/share/doc/project-setup/LICENSE",
    "644",
  ],
  [
    "README.md",
    "/usr/share/licenses/project-setup/README.md",
    "644",
  ],
  [
    "man/project-setup.1",
    "/usr/share/man/man1/project-setup.1",
    "644",
  ],
  [
    "completions/project-setup.bash",
    "/usr/share/bash-completion/completions/project-setup",
    "644",
  ],
  [
    "completions/project-setup.fish",
    "/usr/share/fish/vendor_completions.d/project-setup.fish",
    "644",
  ],
  [
    "completions/_project-setup",
    "/usr/share/zsh/site-completions/",
    "644",
  ],
]
depends = ["libgcc-s1 (>= 3.0)"]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/project-setup", dest = "/usr/bin/project-setup", mode = "755" },
  { source = "LICENSE", dest = "/usr/share/licenses/project-setup/LICENSE", mode = "644" },
  { source = "README.md", dest = "/usr/share/doc/project-setup/README.md", mode = "644" },
  { source = "man/project-setup.1", dest = "/usr/share/man/man1/auth.1", mode = "644", doc = true },
  { source = "completions/project-setup.bash", dest = "/usr/share/bash-completion/completions/project-setup", mode = "644" },
  { source = "completions/project-setup.fish", dest = "/usr/share/fish/vendor_completions.d/project-setup.fish", mode = "644" },
  { source = "completions/_project-setup", dest = "/usr/share/zsh/site-completions/", mode = "644" },
]

[[bin]]
name = "project-setup-completions"
path = "src/bin/completions.rs"

[[bin]]
name = "project-setup-mangen"
path = "src/bin/mangen.rs"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.66"
clap_mangen = "0.2.31"
heck = "0.5.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
project_setup_derive = { path = "./project_setup_derive" }
ratatui = { version = "0.30.0", default-features = false, features = [
  "crossterm",
] }
ratatui-macros = "0.7.0"
reqwest = { version = "0.13.2", default-features = false, features = [
  "default-tls",
  "blocking",
  "form",
  "query"
], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.49.0", features = ["full"] }
tui-big-text = "0.8.2"
zip = { version = "8.1.0", default-features = false, features = ["deflate"], optional = true }

[features]
# default = ["reqwest", "zip"]
default = []
reqwest = ["dep:reqwest"]
zip = ["dep:zip"]

[profile.dev]
strip = true

[profile.release]
strip = true
